<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="#F9F9F9">

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#F9F9F9"/>

    <TextView
        android:id="@+id/now_tap_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_tap"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/now_tap_image"
        android:background="#F9F9F9"/>

    <ImageView
        android:id="@+id/now_tap_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/pic_yellow_sq"
        android:contentDescription="@string/pic_yellow_square"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#F9F9F9"
        />

    <FrameLayout
        android:layout_width="406dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/score_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#F9F9F9">

        <ImageView
            android:id="@+id/pic_up1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_blue_sq"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_editor_absoluteX="-50dp"
            app:layout_editor_absoluteY="-50dp"
            android:contentDescription="@string/pic_blue_square"
            android:onClick="onUp1Click" />

        <ImageView
            android:id="@+id/pic_down1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_green_sq"
            app:layout_constraintStart_toStartOf="@+id/pic_up1"
            app:layout_constraintTop_toTopOf="@+id/pic_up1"
            app:layout_editor_absoluteX="-50dp"
            app:layout_editor_absoluteY="-50dp"
            android:contentDescription="@string/pic_green_square"
            android:onClick="onDown1Click" />

        <ImageView
            android:id="@+id/pic_right1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_red_sq"
            app:layout_constraintStart_toStartOf="@+id/pic_up1"
            app:layout_constraintTop_toTopOf="@+id/pic_up1"
            app:layout_editor_absoluteX="-50dp"
            app:layout_editor_absoluteY="-50dp"
            android:contentDescription="@string/pic_red_square"
            android:onClick="onRight1Click" />

        <ImageView
            android:id="@+id/pic_left1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_yellow_sq"
            app:layout_constraintStart_toStartOf="@+id/pic_up1"
            app:layout_constraintTop_toTopOf="@+id/pic_up1"
            app:layout_editor_absoluteX="-50dp"
            app:layout_editor_absoluteY="-50dp"
            android:contentDescription="@string/pic_yellow_square"
            android:onClick="onLeft1Click" />

        <ImageView
            android:id="@+id/pic_up2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_blue_sq"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_editor_absoluteX="-50dp"
            app:layout_editor_absoluteY="-50dp"
            android:contentDescription="@string/pic_blue_square"
            android:onClick="onUp2Click" />

        <ImageView
            android:id="@+id/pic_down2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_green_sq"
            app:layout_constraintStart_toStartOf="@+id/pic_up1"
            app:layout_constraintTop_toTopOf="@+id/pic_up1"
            app:layout_editor_absoluteX="-50dp"
            app:layout_editor_absoluteY="-50dp"
            android:contentDescription="@string/pic_green_square"
            android:onClick="onDown2Click" />

        <ImageView
            android:id="@+id/pic_right2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_red_sq"
            app:layout_constraintStart_toStartOf="@+id/pic_up1"
            app:layout_constraintTop_toTopOf="@+id/pic_up1"
            app:layout_editor_absoluteX="-50dp"
            app:layout_editor_absoluteY="-50dp"
            android:contentDescription="@string/pic_red_square"
            android:onClick="onRight2Click" />

        <ImageView
            android:id="@+id/pic_left2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_yellow_sq"
            app:layout_constraintStart_toStartOf="@+id/pic_up1"
            app:layout_constraintTop_toTopOf="@+id/pic_up1"
            app:layout_editor_absoluteX="-50dp"
            app:layout_editor_absoluteY="-50dp"
            android:contentDescription="@string/pic_yellow_square"
            android:onClick="onLeft2Click" />

    </FrameLayout>

    <TextView
        android:id="@+id/game_over_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/game_over"
        android:visibility="invisible"
       />

    <Button
        android:id="@+id/game_over_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/game_over_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ok"
        android:visibility="invisible"
        android:onClick="onGameOverButtonClick"
        />


</androidx.constraintlayout.widget.ConstraintLayout>