<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="7"
    tools:context=".BestScoresActivity">

    <TextView
        android:id="@+id/txt_0_0"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/no"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_columnWeight="2"
        tools:targetApi="o"
        />
    <TextView
        android:id="@+id/txt_0_1"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/name"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_columnWeight="4"
        tools:targetApi="o"
        />
    <TextView
        android:id="@+id/txt_0_2"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/score"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_columnWeight="4"
        tools:targetApi="o"
        />

    <TextView
        android:id="@+id/txt_1_0"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/txt_1_1"
        android:layout_row="1"
        android:layout_column="1"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/txt_1_2"
        android:layout_row="1"
        android:layout_column="2"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/txt_2_0"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/txt_2_1"
        android:layout_row="2"
        android:layout_column="1"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/txt_2_2"
        android:layout_row="2"
        android:layout_column="2"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/txt_3_0"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/txt_3_1"
        android:layout_row="3"
        android:layout_column="1"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/txt_3_2"
        android:layout_row="3"
        android:layout_column="2"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/txt_4_0"
        android:layout_row="4"
        android:layout_column="0"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/txt_4_1"
        android:layout_row="4"
        android:layout_column="1"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/txt_4_2"
        android:layout_row="4"
        android:layout_column="2"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/txt_5_0"
        android:layout_row="5"
        android:layout_column="0"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="top|center" />
    <TextView
        android:id="@+id/txt_5_1"
        android:layout_row="5"
        android:layout_column="1"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="top|center" />
    <TextView
        android:id="@+id/txt_5_2"
        android:layout_row="5"
        android:layout_column="2"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="top|center" />

    <Button
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:text="@string/ok"
        android:textSize="20sp"
        android:layout_gravity="bottom|center"
        android:onClick="onOkClick"
        />
</GridLayout>